  run the standard XMLWriter.WriteString over it (which does HTML encoding). This seems to work fine. 
- Added the gm:stats tags to the Windows Mobile build, accidently forgot to change that project file
- the calendarfeed discarded entries unknown to it in the calendar namespace. This is fixed now. Unknown entries to the parser 
  are now correctly added to the extension elements.


== 1.0.9.3 ==
- Google Base changes:
  New features:
    - GBaseQuery supports the following optional parameters; orderby, sortorder, refine and content
    - Support for gm:stats tags
    - GBaseUriFactory can now generate the feed uri of other customers
     
    Fixes:
     - Fixed the GBaseAttributeType hierarchy for date/dateTime/dateTimeRange
     - Fixed the type of the hardcoded ExpirationDate property in GBaseAttributes
- Added a Makefile for Mono builds. This one replaces the Ant file. 	

== 1.0.9.2 == 
- Removed the MethodOverride default for the CalendarService. If you need that (due to firewalls not allowing PUT/DELETE requests, 
  you can reenable this with setting the MethodOverride flag on the factory:
   ((GDataGAuthRequestFactory)calsvc.RequestFactory).MethodOverride = false;  
- Changed the X-Method-Override behaviour for DELETE, to fix an issue with .NET mobile (the mobile client would crash when 
  the contentLength was set to 0 and no stream was requested).

== 1.0.9.1 == 
- Added a KeepAlive property to the factory object. This is set to true by default. .NET 2.0 clients, are due to behaviour changes
  in that runtime encouraged to set this to false.

== 1.0.9 ==
- Fixed an issue where the login services changed the response contenttype. The check for text/plain is now more relaxed.
- Added the missing location calls for Geolocation for GoogleBase
- Fixed a build issue for Windows Mobile in release. The code now compiles for PocketPC and WindowsMobile symbols defined.

== 1.0.8 == 