@@ -9,6 +9,10 @@
 - Added the gm:stats tags to the Windows Mobile build, accidently forgot to change that project file
 - the calendarfeed discarded entries unknown to it in the calendar namespace. This is fixed now. Unknown entries to the parser 
   are now correctly added to the extension elements.
+- added the return-empty parameter to the cellquery class
+- added URL encoding to the authentication parameters (username/passwords etc that had unallowed FORM post chars caused failed login
+  attempts)
+
 
 
 == 1.0.9.3 ==
